# lizenzkatalog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deploy.yml
_archive-bis_20251031/: Lizenzmerkmale.fods  README.md
_archive-bis_20251031/analysis/epl/: Analyse.md
_archive/analysis/: Quellen.md
_archive/analysis/epl/: EPL_v1.0.txt
_archive/analysis/gpl/: GPL v3_de.html
docs/: Apache-2.0.tei.xml  Apache-2.0.txt  CC0-1.0-Universal.tei.xml  CC0-1.0-Universal.txt  GPL-3.0.tei.xml  GPL-3.0.txt  ODC-By-1.0.tei.xml  annotation.dtd  apache-2.0.tei.xml  apache-2.0.txt  cc0-1.0-universal.txt  content.js  content.txt  doc.dtd  gpl-3.0.tei.xml  gpl-3.0.txt  gpl-3.0.xml  index.html  odc_by_1.0_public_text.tei.xml  odc_by_1.0_public_text.txt  style.xsl  test-gpl3.tei.xml  test-gpl3.txt
lizenzkatalog/: Apache-2.0.liz  CC0-1.0-Universal.liz  GPL-3.0.liz  cc0-1.0-universal.liz  gpl-3.0.liz  odc_by_1.0_public_text.liz  test-gpl3.liz
src/: liz2standoff.py
src/site/: content.js
src/site/hinweise/: anti-tivoization.md  lizenzkatalog_taglogik.md
src/styles/: annotation.dtd  liz2table-style.xsl
src/xslt/: liz2table-style.xsl
